--- a/.env
+++ b/.env
@@ -1,14 +1,2 @@
-# WAJIB
-PRIVATE_KEY=0x<ed25519_private_key_hex_atau_base64>
-
-# OPSIONAL: kalau kosong, akan otomatis di-derive dari PRIVATE_KEY
-# OWNER_ADDRESS=0xAlamatKamu
-
-# OPSIONAL (punya default aman):
-# HTTP_URL=https://fullnode.mainnet.sui.io:443
-# DEFAULT_SELL_PERCENT=100
-# DEFAULT_MIN_SELL_RAW=0
-# DEFAULT_COOLDOWN_MS=3000
-# DEFAULT_SLIPPAGE_BPS=100
-# QUOTE_COIN=0x2::sui::SUI
-# DEX_PREF=cetus_agg
+PRIVATE_KEY=0x   # private key Sui (hex, 64/32 bytes)
+HTTP_URL=https://fullnode.mainnet.sui.io:443
