--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-PRIVATE_KEY=0x   # private key Sui (hex, 64/32 bytes)
+PRIVATE_KEY=0x           # punyamu
 HTTP_URL=https://fullnode.mainnet.sui.io:443
+FAST_POLL_MS=60
+SAFE_BPS=300
+SELL_LOCK_MS=1500
+QUIET_429=true
