--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "@mysten/sui": "^1.37.0",
     "@cetusprotocol/aggregator-sdk": "0.14.2",
-    "@flowx-finance/sdk": "^1.5.0",
-    "dotenv": "^16.4.5",
-    "inquirer": "^12.9.1"
+    "@flowx-finance/sdk": "^1.11.3",
+    "@mysten/sui": "^1.37.2",
+    "aftermath-ts-sdk": "^1.3.17",
+    "dotenv": "^16.6.1",
+    "inquirer": "^12.9.2"
   }
 }
